--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contagem de Dias</title>
+    <title>Contagem de Dias Juntos</title>
     <style>
         /* Resetando margens e padding */
         * {
@@ -12,85 +12,70 @@
             box-sizing: border-box;
         }
 
-        /* Definindo o fundo e as cores principais */
+        /* Estilo geral */
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
+            background-color: #000;
+            color: #fff;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            padding: 20px;
+            overflow: hidden;
+            position: relative;
         }
 
-        .container {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 30px;
-            text-align: center;
+        /* Fundo com corações */
+        body::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
-            max-width: 600px;
+            height: 100%;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M50 30 C70 -10, 110 10, 50 80 C-10 10, 30 -10, 50 30 Z' fill='none' stroke='%23e91e63' stroke-width='2'/%3E%3C/svg%3E");
+            background-repeat: repeat;
+            background-size: 50px;
+            opacity: 0.3;
+            z-index: -1;
         }
 
-        h1 {
-            color: #e74c3c;
-            font-size: 36px;
-            margin-bottom: 20px;
+        /* Container principal */
+        .container {
+            text-align: center;
         }
 
-        p {
-            font-size: 24px;
-            margin-bottom: 20px;
-            color: #555;
+        /* Foto com borda rosa */
+        .photo {
+            width: 300px;
+            height: auto;
+            border: 5px solid #e91e63;
+            border-radius: 10px;
+            margin: 20px auto;
+            display: block;
         }
 
+        /* Contagem de dias */
         .count {
             font-size: 48px;
             font-weight: bold;
-            color: #2c3e50;
+            color: #e91e63;
             margin-top: 20px;
         }
 
+        /* Data de início */
         .date {
             font-size: 18px;
-            color: #777;
+            color: #aaa;
             margin-top: 10px;
-        }
-
-        /* Efeitos de hover */
-        .btn {
-            background-color: #e74c3c;
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            font-size: 18px;
-            border-radius: 5px;
-            display: inline-block;
-            margin-top: 30px;
-            transition: background-color 0.3s ease;
-        }
-
-        .btn:hover {
-            background-color: #c0392b;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Contagem de Dias Juntos</h1>
-        <p>Quantos dias se passaram desde que começamos a nossa linda jornada?</p>
-
-        <div class="count">
-            <!-- A contagem de dias será gerada aqui usando JavaScript -->
-            <span id="days-count"></span>
-        </div>
-
+        <img src="data:image/jpeg;base64,<!-- Base64 da imagem aqui -->" alt="Foto do casal" class="photo">
+        <div class="count" id="days-count"></div>
         <p class="date" id="start-date"></p>
-
-        <a href="https://www.exemplo.com" class="btn">Clique para Surpresa!</a>
     </div>
 
     <script>
@@ -102,7 +87,7 @@
             const today = new Date();
             const timeDifference = today - startDate;
             const days = Math.floor(timeDifference / (1000 * 3600 * 24));  // Convertendo para dias
-            document.getElementById('days-count').innerText = days;
+            document.getElementById('days-count').innerText = `${days} dias juntos 💖`;
             document.getElementById('start-date').innerText = `Iniciamos em: ${startDate.toLocaleDateString("pt-BR")}`;
         }
 
