--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 </head>
 <body>
     <div class="container">
-        <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/4gHYSUNDX1BST0ZJTEUAAQEAAAHIAAAAAAQwAABtbnRyUkdCIFhZWiAH4AABAAEAAAAAAABh..." alt="Foto do casal" class="photo">
+        <!-- Foto adicionada com Base64 -->
+        <img src="data:image/jpeg;base64,/9j/4AAQSkZJRgABAQAAAQABAAD/4gHYSUNDX1BST0ZJTEUAAQEAAAHIAAAAAAQwAABtbnRyUkdCIFhZWiAH4AABAAEAAAAAAABhbnRyUkdDA" alt="Foto do casal" class="photo">
         <div class="count" id="days-count"></div>
         <p class="date" id="start-date"></p>
     </div>
