--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }
 
         .photo-container img {
-            max-width: 300px;
+            max-width: 400px; /* Aumentei o tamanho da foto */
             border-radius: 15px;
         }
 
@@ -46,7 +46,7 @@
 
         .start-date {
             font-size: 18px;
-            color: #ccc;
+            color: pink; /* Mesma cor do texto de cima */
         }
     </style>
 </head>
@@ -72,7 +72,7 @@
             const timeDifference = today - startDate;
             const days = Math.floor(timeDifference / (1000 * 3600 * 24));
             document.getElementById('days-count').innerText = `${days} Dias que tu é minha hihi`;
-            document.getElementById('start-date').innerText = `Iniciamos em: ${startDate.toLocaleDateString("pt-BR")}`;
+            document.getElementById('start-date').innerText = `Tu tá desde 01/07/2024 me aturando em momor, que guerreira 🙈`;
         }
 
         // Chama a função para calcular os dias e exibir na tela
