--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         }
 
         .photo-container img {
-            width: 80vw; /* Aumentei um pouco, mas agora ocupa 80% da largura da tela */
+            width: 50vw; /* Foto bem menor, 50% da largura da tela */
             height: auto;
             border-radius: 15px;
             object-fit: cover; /* A imagem será redimensionada para cobrir o espaço */
         }
 
         .days-count {
-            font-size: 42px; /* Aumentei um pouco o tamanho */
+            font-size: 56px; /* Aumentei mais o tamanho */
             color: pink;
             font-weight: bold;
             margin: 10px 0;
@@ -51,7 +51,7 @@
         }
 
         .start-date {
-            font-size: 22px; /* Aumentei o tamanho do texto um pouco */
+            font-size: 28px; /* Aumentei o tamanho do texto */
             color: pink; /* Mesma cor do texto de cima */
             z-index: 1; /* Garante que o texto fique acima da imagem */
         }
