--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         }
 
         .background-hearts {
-            background-image: url('https://www.transparenttextures.com/patterns/3d-squares.png'), 
-                              url('https://www.freepik.com/free-vector/3d-valentines-day-hearts-with-rose-background_9926393.htm'); /* Coração 3D rosa */
-            background-repeat: repeat, repeat;
-            background-size: 60px 60px, 100px 100px; /* Ajustando o tamanho do fundo com corações */
+            background-image: url('https://cdn.pixabay.com/photo/2019/10/24/12/59/heart-4574815_960_720.jpg'); /* Imagem de fundo com corações 3D rosinha */
+            background-repeat: repeat;
+            background-size: 150px 150px; /* Ajustando o tamanho dos corações */
             height: 100vh;
             display: flex;
             flex-direction: column;
