--- a/index.html
+++ b/index.html
@@ -27,20 +27,8 @@
 
         .heart {
             position: absolute;
-            font-size: 30px; /* Tamanho pequeno dos emojis */
-            animation: float 5s infinite;
-        }
-
-        @keyframes float {
-            0% {
-                transform: translateY(0) rotate(0deg);
-            }
-            50% {
-                transform: translateY(-20px) rotate(180deg);
-            }
-            100% {
-                transform: translateY(0) rotate(360deg);
-            }
+            font-size: 20px; /* Corações bem pequenos */
+            z-index: 0;
         }
 
         .photo-container {
@@ -98,18 +86,20 @@
 </head>
 <body>
     <div class="background-hearts">
-        <!-- Corações flutuantes de forma aleatória -->
-        <div class="heart" style="top: 10%; left: 5%;">💞</div>
-        <div class="heart" style="top: 25%; left: 30%;">💕</div>
-        <div class="heart" style="top: 40%; left: 50%;">💗</div>
-        <div class="heart" style="top: 60%; left: 70%;">💖</div>
-        <div class="heart" style="top: 80%; left: 20%;">🩷</div>
-        <div class="heart" style="top: 15%; left: 75%;">💞</div>
-        <div class="heart" style="top: 50%; left: 85%;">💕</div>
-        <div class="heart" style="top: 70%; left: 40%;">💗</div>
-        <div class="heart" style="top: 30%; left: 10%;">💖</div>
-        <div class="heart" style="top: 55%; left: 60%;">🩷</div>
-        <!-- Adicione mais corações conforme necessário -->
+        <!-- Corações 🩷 fixos em várias posições -->
+        <div class="heart" style="top: 5%; left: 5%;">🩷</div>
+        <div class="heart" style="top: 10%; left: 20%;">🩷</div>
+        <div class="heart" style="top: 15%; left: 35%;">🩷</div>
+        <div class="heart" style="top: 25%; left: 50%;">🩷</div>
+        <div class="heart" style="top: 30%; left: 65%;">🩷</div>
+        <div class="heart" style="top: 40%; left: 80%;">🩷</div>
+        <div class="heart" style="top: 45%; left: 10%;">🩷</div>
+        <div class="heart" style="top: 55%; left: 25%;">🩷</div>
+        <div class="heart" style="top: 60%; left: 40%;">🩷</div>
+        <div class="heart" style="top: 70%; left: 55%;">🩷</div>
+        <div class="heart" style="top: 80%; left: 70%;">🩷</div>
+        <div class="heart" style="top: 85%; left: 85%;">🩷</div>
+        <!-- Você pode adicionar mais corações se desejar -->
     </div>
 
     <div class="photo-container">
