--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
             object-fit: cover; /* A imagem será redimensionada para cobrir o espaço */
         }
 
+        .days-count, .start-date {
+            font-weight: bold; /* Colocando os textos em negrito */
+        }
+
         .days-count {
             font-size: 56px; /* Aumentei mais o tamanho */
             color: pink;
-            font-weight: bold;
             margin: 10px 0;
             z-index: 1; /* Garante que o texto fique acima da imagem */
         }
@@ -86,20 +89,26 @@
 </head>
 <body>
     <div class="background-hearts">
-        <!-- Corações 🩷 fixos em várias posições -->
+        <!-- Corações 🩷 espalhados por toda a tela -->
         <div class="heart" style="top: 5%; left: 5%;">🩷</div>
         <div class="heart" style="top: 10%; left: 20%;">🩷</div>
         <div class="heart" style="top: 15%; left: 35%;">🩷</div>
-        <div class="heart" style="top: 25%; left: 50%;">🩷</div>
-        <div class="heart" style="top: 30%; left: 65%;">🩷</div>
-        <div class="heart" style="top: 40%; left: 80%;">🩷</div>
-        <div class="heart" style="top: 45%; left: 10%;">🩷</div>
-        <div class="heart" style="top: 55%; left: 25%;">🩷</div>
-        <div class="heart" style="top: 60%; left: 40%;">🩷</div>
-        <div class="heart" style="top: 70%; left: 55%;">🩷</div>
-        <div class="heart" style="top: 80%; left: 70%;">🩷</div>
-        <div class="heart" style="top: 85%; left: 85%;">🩷</div>
-        <!-- Você pode adicionar mais corações se desejar -->
+        <div class="heart" style="top: 20%; left: 50%;">🩷</div>
+        <div class="heart" style="top: 25%; left: 65%;">🩷</div>
+        <div class="heart" style="top: 30%; left: 80%;">🩷</div>
+        <div class="heart" style="top: 35%; left: 15%;">🩷</div>
+        <div class="heart" style="top: 40%; left: 30%;">🩷</div>
+        <div class="heart" style="top: 45%; left: 45%;">🩷</div>
+        <div class="heart" style="top: 50%; left: 60%;">🩷</div>
+        <div class="heart" style="top: 55%; left: 75%;">🩷</div>
+        <div class="heart" style="top: 60%; left: 90%;">🩷</div>
+        <div class="heart" style="top: 65%; left: 10%;">🩷</div>
+        <div class="heart" style="top: 70%; left: 25%;">🩷</div>
+        <div class="heart" style="top: 75%; left: 40%;">🩷</div>
+        <div class="heart" style="top: 80%; left: 55%;">🩷</div>
+        <div class="heart" style="top: 85%; left: 70%;">🩷</div>
+        <div class="heart" style="top: 90%; left: 85%;">🩷</div>
+        <!-- Adicione mais corações se desejar -->
     </div>
 
     <div class="photo-container">
