--- a/index.html
+++ b/index.html
@@ -89,26 +89,55 @@
 </head>
 <body>
     <div class="background-hearts">
-        <!-- Corações 🩷 espalhados por toda a tela -->
+        <!-- Corações 🩷 espalhados por toda a tela, sem cobrir os textos -->
         <div class="heart" style="top: 5%; left: 5%;">🩷</div>
-        <div class="heart" style="top: 10%; left: 20%;">🩷</div>
+        <div class="heart" style="top: 5%; left: 15%;">🩷</div>
+        <div class="heart" style="top: 5%; left: 25%;">🩷</div>
+        <div class="heart" style="top: 5%; left: 35%;">🩷</div>
+        <div class="heart" style="top: 5%; left: 45%;">🩷</div>
+        <div class="heart" style="top: 5%; left: 55%;">🩷</div>
+        <div class="heart" style="top: 5%; left: 65%;">🩷</div>
+        <div class="heart" style="top: 5%; left: 75%;">🩷</div>
+        <div class="heart" style="top: 5%; left: 85%;">🩷</div>
+        <div class="heart" style="top: 15%; left: 5%;">🩷</div>
+        <div class="heart" style="top: 15%; left: 15%;">🩷</div>
+        <div class="heart" style="top: 15%; left: 25%;">🩷</div>
         <div class="heart" style="top: 15%; left: 35%;">🩷</div>
-        <div class="heart" style="top: 20%; left: 50%;">🩷</div>
+        <div class="heart" style="top: 15%; left: 45%;">🩷</div>
+        <div class="heart" style="top: 15%; left: 55%;">🩷</div>
+        <div class="heart" style="top: 15%; left: 65%;">🩷</div>
+        <div class="heart" style="top: 15%; left: 75%;">🩷</div>
+        <div class="heart" style="top: 15%; left: 85%;">🩷</div>
+        <div class="heart" style="top: 25%; left: 5%;">🩷</div>
+        <div class="heart" style="top: 25%; left: 15%;">🩷</div>
+        <div class="heart" style="top: 25%; left: 25%;">🩷</div>
+        <div class="heart" style="top: 25%; left: 35%;">🩷</div>
+        <div class="heart" style="top: 25%; left: 45%;">🩷</div>
+        <div class="heart" style="top: 25%; left: 55%;">🩷</div>
         <div class="heart" style="top: 25%; left: 65%;">🩷</div>
-        <div class="heart" style="top: 30%; left: 80%;">🩷</div>
+        <div class="heart" style="top: 25%; left: 75%;">🩷</div>
+        <div class="heart" style="top: 25%; left: 85%;">🩷</div>
+        <div class="heart" style="top: 35%; left: 5%;">🩷</div>
         <div class="heart" style="top: 35%; left: 15%;">🩷</div>
-        <div class="heart" style="top: 40%; left: 30%;">🩷</div>
+        <div class="heart" style="top: 35%; left: 25%;">🩷</div>
+        <div class="heart" style="top: 35%; left: 35%;">🩷</div>
+        <div class="heart" style="top: 35%; left: 45%;">🩷</div>
+        <div class="heart" style="top: 35%; left: 55%;">🩷</div>
+        <div class="heart" style="top: 35%; left: 65%;">🩷</div>
+        <div class="heart" style="top: 35%; left: 75%;">🩷</div>
+        <div class="heart" style="top: 35%; left: 85%;">🩷</div>
+        <!-- Mais corações, distribuídos por toda a tela -->
+        <div class="heart" style="top: 45%; left: 5%;">🩷</div>
+        <div class="heart" style="top: 45%; left: 15%;">🩷</div>
+        <div class="heart" style="top: 45%; left: 25%;">🩷</div>
+        <div class="heart" style="top: 45%; left: 35%;">🩷</div>
         <div class="heart" style="top: 45%; left: 45%;">🩷</div>
-        <div class="heart" style="top: 50%; left: 60%;">🩷</div>
-        <div class="heart" style="top: 55%; left: 75%;">🩷</div>
-        <div class="heart" style="top: 60%; left: 90%;">🩷</div>
-        <div class="heart" style="top: 65%; left: 10%;">🩷</div>
-        <div class="heart" style="top: 70%; left: 25%;">🩷</div>
-        <div class="heart" style="top: 75%; left: 40%;">🩷</div>
-        <div class="heart" style="top: 80%; left: 55%;">🩷</div>
-        <div class="heart" style="top: 85%; left: 70%;">🩷</div>
-        <div class="heart" style="top: 90%; left: 85%;">🩷</div>
-        <!-- Adicione mais corações se desejar -->
+        <div class="heart" style="top: 45%; left: 55%;">🩷</div>
+        <div class="heart" style="top: 45%; left: 65%;">🩷</div>
+        <div class="heart" style="top: 45%; left: 75%;">🩷</div>
+        <div class="heart" style="top: 45%; left: 85%;">🩷</div>
+        <div class="heart" style="top: 55%; left: 5%;">🩷</div>
+        <!-- Corações adicionais podem ser adicionados conforme necessário -->
     </div>
 
     <div class="photo-container">
@@ -116,33 +145,4 @@
         <img src="Image" alt="Foto do casal">
     </div>
     <div class="days-count" id="days-count">
-        <!-- Dias juntos serão calculados aqui -->
-    </div>
-    <div class="start-date" id="start-date"></div>
-
-    <!-- Linha horizontal rosa -->
-    <div class="line"></div>
-
-    <!-- Espaço para a carta futura -->
-    <div class="letter" id="letter">
-        <!-- Você pode adicionar sua carta aqui mais tarde -->
-    </div>
-
-    <script>
-        // Data do começo do relacionamento
-        const startDate = new Date("2024-07-01");
-
-        // Função para calcular os dias passados
-        function calculateDays() {
-            const today = new Date();
-            const timeDifference = today - startDate;
-            const days = Math.floor(timeDifference / (1000 * 3600 * 24));
-            document.getElementById('days-count').innerText = `${days} Dias que tu é minha hihi`;
-            document.getElementById('start-date').innerText = `Tu tá desde 01/07/2024 me aturando em momor, que guerreira 🙈`;
-        }
-
-        // Chama a função para calcular os dias e exibir na tela
-        calculateDays();
-    </script>
-</body>
-</html>
+        <!-- Dias juntos serão calcul
