--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         .background-hearts {
-            background-image: url('fundo.png'); /* Usando a imagem "fundo" que você adicionou no repositório */
+            background-image: url('fundo.png'); /* Substitua com o caminho correto para a imagem "fundo" */
             background-size: cover; /* Faz o fundo cobrir toda a tela */
             height: 100vh;
             display: flex;
@@ -27,16 +27,19 @@
 
         .photo-container {
             padding: 20px;
-            border-radius: 0%; /* Tornando a foto quadrada */
+            border-radius: 15px;
             display: inline-block;
             margin-bottom: 20px;
             position: relative;
+            overflow: hidden;
         }
 
         .photo-container img {
-            width: 50vw; /* Foto menor, 50% da largura da tela */
-            height: 50vw; /* Garantindo que a altura seja igual à largura */
-            object-fit: cover;
+            width: auto;
+            max-width: 90vw; /* Ajuste da largura, mantendo a proporção original */
+            height: auto;
+            max-height: 70vh; /* Ajuste da altura para não ocupar toda a tela */
+            object-fit: contain; /* Manter a proporção original da imagem */
         }
 
         .days-count {
